Closed Bug 1042884 Opened 12 years ago Closed 12 years ago

Intermittent browser_audionode-actor-get-params-01.js | application crashed [@ mozilla::AudioStream::DataCallback(void *,long)] after "Assertion failure: mState != SHUTDOWN (No data callback after shutdown), at content\media\AudioStream.cpp:1037"

Categories

(Core :: Audio/Video, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34
Tracking Status
firefox32 --- fixed
firefox33 --- fixed
firefox34 --- fixed
firefox-esr24 --- unaffected
firefox-esr31 --- unaffected
b2g-v2.0 --- fixed
b2g-v2.1 --- fixed

People

(Reporter: RyanVM, Assigned: jwwang)

References

Details

(Keywords: assertion, crash, intermittent-failure)

Attachments

(3 files)

https://tbpl.mozilla.org/php/getParsedLog.php?id=44450781&tree=Fx-Team Windows 7 32-bit fx-team debug test mochitest-devtools-chrome-3 on 2014-07-23 10:39:49 PDT for push cade5f2e7c84 slave: t-w732-ix-008 10:57:53 INFO - 16588 INFO TEST-START | chrome://mochitests/content/browser/browser/devtools/webaudioeditor/test/browser_audionode-actor-get-params-01.js 10:57:53 INFO - 16589 INFO ++DOCSHELL 0FB45800 == 54 [pid = 2288] [id = 1885] 10:57:53 INFO - 16590 INFO ++DOMWINDOW == 27 (0D386600) [pid = 2288] [serial = 4112] [outer = 00000000] 10:57:53 INFO - 16591 INFO ++DOMWINDOW == 28 (1035EE00) [pid = 2288] [serial = 4113] [outer = 0D386600] 10:57:53 INFO - 16592 INFO [2288] WARNING: NS_ENSURE_TRUE(mMutable) failed: file c:\builds\moz2_slave\fx-team-w32-d-0000000000000000\build\netwerk\base\src\nsSimpleURI.cpp, line 265 10:57:53 INFO - 16593 INFO --DOMWINDOW == 27 (0C4D9400) [pid = 2288] [serial = 4101] [outer = 0C45D800] [url = about:blank] 10:57:53 INFO - 16594 INFO --DOMWINDOW == 26 (0FB50E00) [pid = 2288] [serial = 4107] [outer = 0CBC3400] [url = about:blank] 10:57:53 INFO - 16595 INFO --DOMWINDOW == 25 (0C45D800) [pid = 2288] [serial = 4100] [outer = 00000000] [url = about:blank] 10:57:53 INFO - 16596 INFO ++DOMWINDOW == 26 (1035CE00) [pid = 2288] [serial = 4114] [outer = 0D386600] 10:57:54 INFO - 16597 INFO ++DOMWINDOW == 27 (1441BC00) [pid = 2288] [serial = 4115] [outer = 0D386600] 10:57:54 INFO - 16598 INFO ###!!! [Parent][OnMaybeDequeueOne] Error: Channel closing: too late to send/recv, messages will be lost 10:57:54 INFO - 16599 INFO --DOMWINDOW == 26 (0CBC3400) [pid = 2288] [serial = 4106] [outer = 00000000] [url = http://example.com/browser/browser/devtools/webaudioeditor/test/doc_simple-node-creation.html] 10:57:54 INFO - 16600 INFO Destroying context 259FA4A8 surface 0065A0D0 on display 005B0AA8 10:57:54 INFO - 16601 INFO --DOMWINDOW == 25 (0D412600) [pid = 2288] [serial = 4102] [outer = 00000000] [url = data:text/html,<DOCTYPE%20html><html><head><meta%20charset='utf-8'/><title>Three%20Laws</title></head><body><div%20id='first-law'>A%20robot%20may%20not%20injure%20a%20human%20being%20or,%20through%20inaction,%20allow%20a%20human%20being%20to%20come%20to%20harm.</div><div>A%20robot%20must%20obey%20the%20orders%20given%20to%20it%20by%20human%20beings,%20except%20where%20such%20orders%20would%20conflict%20with%20the%20First%20Law.</div><div>A%20robot%20must%20protect%20its%20own%20existence%20as%20long%20as%20such%20protection%20does%20not%20conflict%20with%20the%20First%20or%20Second%20Laws.</div><div%20id='far-far-away'%20style='position:%20absolute;%20top:%20250%;'>I%20like%20bacon.</div><body></html>] 10:57:54 INFO - 16602 INFO [2288] WARNING: NS_ENSURE_TRUE(mMutable) failed: file c:\builds\moz2_slave\fx-team-w32-d-0000000000000000\build\netwerk\base\src\nsSimpleURI.cpp, line 265 10:57:55 INFO - 16603 INFO --DOCSHELL 0C49E800 == 53 [pid = 2288] [id = 1769] 10:57:55 INFO - 16604 INFO --DOCSHELL 2AA89000 == 52 [pid = 2288] [id = 1785] 10:57:55 INFO - 16605 INFO --DOCSHELL 292D7C00 == 51 [pid = 2288] [id = 1783] 10:57:55 INFO - 16606 INFO --DOCSHELL 0BDFB000 == 50 [pid = 2288] [id = 1802] 10:57:55 INFO - 16607 INFO --DOCSHELL 10775400 == 49 [pid = 2288] [id = 1874] 10:57:55 INFO - 16608 INFO --DOCSHELL 173D2C00 == 48 [pid = 2288] [id = 1839] 10:57:55 INFO - 16609 INFO --DOCSHELL 0B7D0400 == 47 [pid = 2288] [id = 1800] 10:57:55 INFO - 16610 INFO --DOCSHELL 1A30E800 == 46 [pid = 2288] [id = 1878] 10:57:55 INFO - 16611 INFO --DOCSHELL 2C7C2C00 == 45 [pid = 2288] [id = 1784] 10:57:55 INFO - 16612 INFO --DOCSHELL 14135800 == 44 [pid = 2288] [id = 1871] 10:57:55 INFO - 16613 INFO --DOCSHELL 257E4C00 == 43 [pid = 2288] [id = 1799] 10:57:55 INFO - 16614 INFO --DOCSHELL 3554E400 == 42 [pid = 2288] [id = 1798] 10:57:55 INFO - 16615 INFO --DOCSHELL 2D9C6C00 == 41 [pid = 2288] [id = 1797] 10:57:55 INFO - 16616 INFO --DOCSHELL 16E8C400 == 40 [pid = 2288] [id = 1826] 10:57:55 INFO - 16617 INFO --DOCSHELL 0CC0D800 == 39 [pid = 2288] [id = 1801] 10:57:55 INFO - 16618 INFO --DOCSHELL 162D1C00 == 38 [pid = 2288] [id = 1825] 10:57:55 INFO - 16619 INFO --DOCSHELL 0FB46000 == 37 [pid = 2288] [id = 1822] 10:57:55 INFO - 16620 INFO --DOCSHELL 0D40D000 == 36 [pid = 2288] [id = 1821] 10:57:55 INFO - 16621 INFO --DOCSHELL 16E8A400 == 35 [pid = 2288] [id = 1852] 10:57:55 INFO - 16622 INFO --DOCSHELL 144BE000 == 34 [pid = 2288] [id = 1824] 10:57:55 INFO - 16623 INFO --DOCSHELL 103CCC00 == 33 [pid = 2288] [id = 1843] 10:57:55 INFO - 16624 INFO --DOCSHELL 15D32000 == 32 [pid = 2288] [id = 1841] 10:57:55 INFO - 16625 INFO --DOCSHELL 0CBB7000 == 31 [pid = 2288] [id = 1815] 10:57:55 INFO - 16626 INFO --DOCSHELL 0BEA2C00 == 30 [pid = 2288] [id = 1809] 10:57:55 INFO - 16627 INFO --DOCSHELL 0BEE1C00 == 29 [pid = 2288] [id = 1806] 10:57:55 INFO - 16628 INFO --DOCSHELL 0BEEEC00 == 28 [pid = 2288] [id = 1810] 10:57:55 INFO - 16629 INFO --DOCSHELL 0C4A1000 == 27 [pid = 2288] [id = 1812] 10:57:55 INFO - 16630 INFO --DOCSHELL 0C49BC00 == 26 [pid = 2288] [id = 1804] 10:57:55 INFO - 16631 INFO --DOCSHELL 0BF57400 == 25 [pid = 2288] [id = 1805] 10:57:55 INFO - 16632 INFO --DOCSHELL 0B7C9C00 == 24 [pid = 2288] [id = 1823] 10:57:55 INFO - 16633 INFO --DOCSHELL 0C49B000 == 23 [pid = 2288] [id = 1816] 10:57:55 INFO - 16634 INFO --DOCSHELL 0B79F800 == 22 [pid = 2288] [id = 1818] 10:57:55 INFO - 16635 INFO --DOCSHELL 09FB3400 == 21 [pid = 2288] [id = 1820] 10:57:55 INFO - 16636 INFO --DOCSHELL 0D03E400 == 20 [pid = 2288] [id = 1817] 10:57:55 INFO - 16637 INFO --DOCSHELL 0D035C00 == 19 [pid = 2288] [id = 1819] 10:57:55 INFO - 16638 INFO --DOCSHELL 0C4A5400 == 18 [pid = 2288] [id = 1807] 10:57:55 INFO - 16639 INFO --DOCSHELL 0F683C00 == 17 [pid = 2288] [id = 1813] 10:57:55 INFO - 16640 INFO --DOCSHELL 0C4A3400 == 16 [pid = 2288] [id = 1811] 10:57:55 INFO - 16641 INFO --DOCSHELL 0F686800 == 15 [pid = 2288] [id = 1845] 10:57:55 INFO - 16642 INFO --DOCSHELL 01624400 == 14 [pid = 2288] [id = 1803] 10:57:55 INFO - 16643 INFO --DOCSHELL 0B7D0800 == 13 [pid = 2288] [id = 1808] 10:57:55 INFO - 16644 INFO --DOCSHELL 0F680C00 == 12 [pid = 2288] [id = 1883] 10:57:55 INFO - 16645 INFO --DOCSHELL 0CBB9800 == 11 [pid = 2288] [id = 1882] 10:57:55 INFO - 16646 INFO Assertion failure: mState != SHUTDOWN (No data callback after shutdown), at c:\builds\moz2_slave\fx-team-w32-d-0000000000000000\build\content\media\AudioStream.cpp:1037 10:57:55 INFO - 16647 INFO mozilla::AudioStream::DataCallback_S(cubeb_stream *,void *,void *,long) [content/media/AudioStream.h:300] 10:57:56 INFO - 16648 INFO winmm_refill_stream [media/libcubeb/src/cubeb_winmm.c:141] 10:57:56 INFO - 16649 INFO winmm_stream_init [media/libcubeb/src/cubeb_winmm.c:449] 10:57:56 INFO - 16650 INFO cubeb_stream_init [media/libcubeb/src/cubeb.c:209] 10:57:56 INFO - 16651 INFO mozilla::AudioStream::OpenCubeb(cubeb_stream_params &,mozilla::AudioStream::LatencyRequest) [content/media/AudioStream.cpp:575] 10:57:56 INFO - 16652 INFO mozilla::AudioInitTask::Run() [content/media/AudioStream.cpp:647] 10:57:56 INFO - 16653 INFO nsThread::ProcessNextEvent(bool,bool *) [xpcom/threads/nsThread.cpp:770] 10:57:56 INFO - 16654 INFO NS_ProcessNextEvent(nsIThread *,bool) [xpcom/glue/nsThreadUtils.cpp:265] 10:57:56 INFO - 16655 INFO mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate *) [ipc/glue/MessagePump.cpp:326] 10:57:56 INFO - 16656 INFO MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:229] 10:57:56 INFO - 16657 INFO MessageLoop::RunHandler() [ipc/chromium/src/base/message_loop.cc:223] 10:57:56 INFO - 16658 INFO MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:197] 10:57:56 INFO - 16659 INFO nsThread::ThreadFunc(void *) [xpcom/threads/nsThread.cpp:356] 10:57:56 INFO - 16660 INFO _PR_NativeRunThread [nsprpub/pr/src/threads/combined/pruthr.c:397] 10:57:56 INFO - 16661 INFO pr_root [nsprpub/pr/src/md/windows/w95thred.c:90] 10:57:56 INFO - 16662 INFO MSVCR100 + 0x5c6de 10:57:56 INFO - 16663 INFO MSVCR100 + 0x5c788 10:57:56 INFO - 16664 INFO kernel32 + 0x4ed6c 10:57:56 INFO - 16665 INFO ntdll + 0x6377b 10:57:56 INFO - 16666 INFO ntdll + 0x6374e 10:57:56 INFO - 16667 INFO Assertion failure: mState != SHUTDOWN (No data callback after shutdown), at c:\builds\moz2_slave\fx-team-w32-d-0000000000000000\build\content\media\AudioStream.cpp:1037 10:57:56 INFO - 16668 INFO mozilla::AudioStream::DataCallback_S(cubeb_stream *,void *,void *,long) [content/media/AudioStream.h:300] 10:57:56 INFO - 16669 INFO winmm_refill_stream [media/libcubeb/src/cubeb_winmm.c:141] 10:57:56 INFO - 16670 INFO winmm_stream_init [media/libcubeb/src/cubeb_winmm.c:449] 10:57:56 INFO - 16671 INFO cubeb_stream_init [media/libcubeb/src/cubeb.c:209] 10:57:56 INFO - 16672 INFO mozilla::AudioStream::OpenCubeb(cubeb_stream_params &,mozilla::AudioStream::LatencyRequest) [content/media/AudioStream.cpp:575] 10:57:56 INFO - 16673 INFO mozilla::AudioInitTask::Run() [content/media/AudioStream.cpp:647] 10:57:56 INFO - 16674 INFO nsThread::ProcessNextEvent(bool,bool *) [xpcom/threads/nsThread.cpp:770] 10:57:56 INFO - 16675 INFO NS_ProcessNextEvent(nsIThread *,bool) [xpcom/glue/nsThreadUtils.cpp:265] 10:57:56 INFO - 16676 INFO mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate *) [ipc/glue/MessagePump.cpp:326] 10:57:56 INFO - 16677 INFO MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:229] 10:57:56 INFO - 16678 INFO MessageLoop::RunHandler() [ipc/chromium/src/base/message_loop.cc:223] 10:57:56 INFO - 16679 INFO MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:197] 10:57:56 INFO - 16680 INFO nsThread::ThreadFunc(void *) [xpcom/threads/nsThread.cpp:356] 10:57:56 INFO - 16681 INFO _PR_NativeRunThread [nsprpub/pr/src/threads/combined/pruthr.c:397] 10:57:56 INFO - 16682 INFO pr_root [nsprpub/pr/src/md/windows/w95thred.c:90] 10:57:56 INFO - 16683 INFO MSVCR100 + 0x5c6de 10:57:56 INFO - 16684 INFO MSVCR100 + 0x5c788 10:57:56 INFO - 16685 INFO kernel32 + 0x4ed6c 10:57:56 INFO - 16686 INFO ntdll + 0x6377b 10:57:56 INFO - 16687 INFO ntdll + 0x6374e 10:57:56 INFO - 16688 INFO TEST-OK | chrome://mochitests/content/browser/browser/devtools/webaudioeditor/test/browser_audionode-actor-get-params-01.js | took 1937ms 10:57:57 INFO - 16689 INFO ++DOCSHELL 09FB2C00 == 12 [pid = 2288] [id = 1886] 10:57:57 INFO - 16690 INFO ++DOMWINDOW == 26 (0BDAFA00) [pid = 2288] [serial = 4116] [outer = 00000000] 10:57:57 INFO - 16691 INFO ++DOMWINDOW == 27 (0C464A00) [pid = 2288] [serial = 4117] [outer = 0BDAFA00] 10:57:57 INFO - 16692 INFO [2288] WARNING: NS_ENSURE_TRUE(mMutable) failed: file c:\builds\moz2_slave\fx-team-w32-d-0000000000000000\build\netwerk\base\src\nsSimpleURI.cpp, line 265 10:57:57 INFO - TEST-INFO | Main app process: exit status 80000003 10:57:57 INFO - 16693 INFO TEST-UNEXPECTED-FAIL | chrome://mochitests/content/browser/browser/devtools/webaudioeditor/test/browser_audionode-actor-get-params-01.js | application terminated with exit code 2147483651 10:57:57 INFO - 16694 INFO runtests.py | Application ran for: 0:13:55.479000 10:57:57 INFO - 16695 INFO zombiecheck | Reading PID log: c:\users\cltbld\appdata\local\temp\tmprtliakpidlog 10:58:05 WARNING - PROCESS-CRASH | chrome://mochitests/content/browser/browser/devtools/webaudioeditor/test/browser_audionode-actor-get-params-01.js | application crashed [@ mozilla::AudioStream::DataCallback(void *,long)] 10:58:05 INFO - Crash dump filename: c:\users\cltbld\appdata\local\temp\tmp0yxgom.mozrunner\minidumps\02da82c1-5ea6-4dc4-bf1f-f5a4074d1074.dmp 10:58:05 INFO - Operating system: Windows NT 10:58:05 INFO - 6.1.7601 Service Pack 1 10:58:05 INFO - CPU: x86 10:58:05 INFO - GenuineIntel family 6 model 30 stepping 5 10:58:05 INFO - 8 CPUs 10:58:05 INFO - Crash reason: EXCEPTION_BREAKPOINT 10:58:05 INFO - Crash address: 0x668e6ab5 10:58:05 INFO - Thread 79 (crashed) 10:58:05 INFO - 0 xul.dll!mozilla::AudioStream::DataCallback(void *,long) [AudioStream.cpp:cade5f2e7c84 : 1037 + 0x20] 10:58:05 INFO - eip = 0x668e6ab5 esp = 0x3f79fc08 ebp = 0x3f79fc5c ebx = 0x15e17740 10:58:05 INFO - esi = 0x107a6eb0 edi = 0x15e1775c eax = 0x00000000 ecx = 0x63bdff12 10:58:05 INFO - edx = 0x77377094 efl = 0x00000212 10:58:05 INFO - Found by: given as instruction pointer in context 10:58:05 INFO - 1 xul.dll!mozilla::AudioStream::DataCallback_S(cubeb_stream *,void *,void *,long) [AudioStream.h:cade5f2e7c84 : 299 + 0xd] 10:58:05 INFO - eip = 0x668e7613 esp = 0x3f79fc64 ebp = 0x3f79fc6c 10:58:05 INFO - Found by: call frame info 10:58:05 INFO - 2 gkmedias.dll!winmm_refill_stream [cubeb_winmm.c:cade5f2e7c84 : 141 + 0xe] 10:58:05 INFO - eip = 0x63de40ac esp = 0x3f79fc74 ebp = 0x3f79fc9c 10:58:05 INFO - Found by: call frame info 10:58:05 INFO - 3 gkmedias.dll!winmm_stream_init [cubeb_winmm.c:cade5f2e7c84 : 449 + 0x4] 10:58:05 INFO - eip = 0x63de4b3d esp = 0x3f79fca4 ebp = 0x3f79fce8 10:58:05 INFO - Found by: call frame info 10:58:05 INFO - 4 gkmedias.dll!cubeb_stream_init [cubeb.c:cade5f2e7c84 : 209 + 0x20] 10:58:05 INFO - eip = 0x63de3e86 esp = 0x3f79fcf0 ebp = 0x3f79fd20 10:58:05 INFO - Found by: call frame info 10:58:05 INFO - 5 xul.dll!mozilla::AudioStream::OpenCubeb(cubeb_stream_params &,mozilla::AudioStream::LatencyRequest) [AudioStream.cpp:cade5f2e7c84 : 575 + 0x29] 10:58:05 INFO - eip = 0x668e79ee esp = 0x3f79fd28 ebp = 0x3f79fd80 10:58:05 INFO - Found by: call frame info 10:58:05 INFO - 6 xul.dll!mozilla::AudioInitTask::Run() [AudioStream.cpp:cade5f2e7c84 : 644 + 0xe] 10:58:05 INFO - eip = 0x668e7b97 esp = 0x3f79fd88 ebp = 0x3f79fd98 10:58:05 INFO - Found by: call frame info 10:58:05 INFO - 7 xul.dll!nsThread::ProcessNextEvent(bool,bool *) [nsThread.cpp:cade5f2e7c84 : 770 + 0xd] 10:58:05 INFO - eip = 0x6569022a esp = 0x3f79fda0 ebp = 0x3f79fdfc 10:58:05 INFO - Found by: call frame info
Assignee: nobody → jsantell
Paul, is this something caused by the tools, or the underlying audio implementation? Not seeing what could be happening in the tests to cause this assertion failure in an Audio Stream.
Flags: needinfo?(paul)
It looks like AudioInitTask is run after AudioStream::Shutdown() is called. I will look at this issue. How can I run the test to repro this issue?
Flags: needinfo?(paul)
Hi Jordan, Can you give this patch a try to see if it fix the problem?
Not sure if that patch fixes the problem, as this is the first time I've seen this crash (will have to commit and hope for no intermittents). To run the tests: `./mach mochitest-devtools browser/devtools/webaudioeditor/test/browser_audionode-actor-get-params-01.js` Or the whole web audio editor suite: `./mach mochitest-devtools browser/devtools/webaudioeditor`
Flags: needinfo?(jwwang)
I can't repro it in a normal way. However I could by delaying the execution of AudioInitTask::Run() in AudioStream.cpp. Since comment 2 is theoretically possible, lets take the patch and see if it will happen again.
Flags: needinfo?(jwwang)
Comment on attachment 8461290 [details] [diff] [review] 1042884_fix_OpenCubeb_after_shutdown.patch Somehow it is possible for AudioInitTask::Run() (maybe due to CPU scheduling in some extreme case) to run after AudioStream::Shutdown(), lets add some protection for that.
Attachment #8461290 - Flags: review?(kinetik)
Attachment #8461290 - Flags: review?(kinetik) → review+
Assignee: jsantell → jwwang
Status: NEW → ASSIGNED
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
This failure appears to have been trunk-only, but I'm not sure if the underlying problem is on older branches or not (but I suspect it is). Please nominate it for Aurora/Beta uplift if that's the case :)
Flags: needinfo?(jwwang)
Comment on attachment 8461290 [details] [diff] [review] 1042884_fix_OpenCubeb_after_shutdown.patch Approval Request Comment [Feature/regressing bug #]:unknown [User impact if declined]:declined software quality for decreased test coverage [Describe test coverage new/current, TBPL]: Aurora Try: https://tbpl.mozilla.org/?tree=Try&rev=ac464251d52b Beta Try: https://tbpl.mozilla.org/?tree=Try&rev=12a399793da9 [Risks and why]: low, the change is simple [String/UUID change made/needed]:none
Attachment #8461290 - Flags: approval-mozilla-beta?
Attachment #8461290 - Flags: approval-mozilla-aurora?
Flags: needinfo?(jwwang)
Uplift request, I guess 32 & 33 are affected too then.
Attachment #8461290 - Flags: approval-mozilla-beta?
Attachment #8461290 - Flags: approval-mozilla-beta+
Attachment #8461290 - Flags: approval-mozilla-aurora?
Attachment #8461290 - Flags: approval-mozilla-aurora+
(In reply to TBPL Robot from comment #15) :(
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Target Milestone: mozilla34 → ---
Wait until AudioInitTask finished before proceeding to Shutdown().
Attachment #8472772 - Flags: review?(kinetik)
Attachment #8472772 - Flags: review?(kinetik) → review+
TRY: https://tbpl.mozilla.org/?tree=Try&rev=c6847f9abad0 most green. 20 green runs for Windows XP 32-bit try debug test mochitest-devtools-chrome-3. Please check in 1046756_fix_callback_after_shutdown.patch only. Thanks
Keywords: checkin-needed
Status: REOPENED → RESOLVED
Closed: 12 years ago12 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
Approval Request Comment [Feature/regressing bug #]:1042884_fix_OpenCubeb_after_shutdown.patch of bug 1042884 [User impact if declined]:declined software quality for decreased test coverage [Describe test coverage new/current, TBPL]: TRY: https://tbpl.mozilla.org/?tree=Try&rev=11181a19a8f2 No failures in mochitest-devtools-chrome-3. [Risks and why]: low, the patch is well-tested. The previous patch (1042884_fix_OpenCubeb_after_shutdown.patch) doesn't completely address the issue. We need this patch to fix the problem. [String/UUID change made/needed]:none
Attachment #8474314 - Flags: review+
Attachment #8474314 - Flags: approval-mozilla-aurora?
JW, the status flags marks this bug fixed for 32 and 33. Are they wrong?
Flags: needinfo?(jwwang)
The previous patch (1042884_fix_OpenCubeb_after_shutdown.patch) which was uplifted to Aurora and Beta doesn't completely address the issue. Please reset the status flags for 33 only. 32 (Beta) is not affected by this patch and this bug doesn't happen on Beta.
Flags: needinfo?(jwwang)
Attachment #8474314 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: