Bug 1042884 - Do nothing in AudioStream::OpenCubeb() after shutdown. r=kinetik